# chatterbox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  nginx.conf  shell.nix
.github/workflows/: docker-publish.yml
posts/: ac-idea.md  blog-wishlist.md  books-reading-may.md  fate-ac.md  hello-again.md
src/: image.rs  main.rs  notion.rs  post.rs  schema.rs  templates.rs
