[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
image = "0.24"
webp = "0.2"
glob = "0.3"
serde-xml-rs = "0.5"
chrono = "0.4"
