[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
image = { version = "0.24.4", features = ["webp", "webp-encoder"] }
glob = "0.3"
serde-xml-rs = "0.5"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }